2008-02-01  Dan Winship  <danw@gnome.org>

	* pygobject-2.0.pc.in (defsdir): Add this so other bindings can
	find gio.defs

2008-01-21  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (async_result_callback_marshal): 
	Don't assume the buffer is set, use Py_XINCREF instead of Py_INCREF.

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/gfile.override:
	* tests/test_gio.py:
	Implement and test GFile.read_async. Use try/finally to always quit
	the mainloop, even if the test fail.
	Update source comment headers.

2008-01-20  Johan Dahlin  <johan@gnome.org>

	* tests/test_gio.py (TestVolumeMonitor): New test

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/gio.override:
	* gio/giomodule.c:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/unix.override:
	* gio/unixmodule.c:

	Split out overrides into more files. Fix up module description in 
	comments

2008-01-20  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_simple_async_result_get_buffer): Add
	a new method, to fetch the buffer
	(_wrap_g_input_stream_read_async): Save a reference to the buffer.
	* tests/test_gio.py (TestInputStream.testReadAsync.callback): 
	Check the content
	
	* tests/test_gio.py (TestInputStream.testReadAsyncError): 
	New function to test error condition of async read.

	* gio/gio.override (async_result_callback_marshal): Grab a reference
	to callback/data.

2008-01-19  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_output_stream_write): Impl.
	* gio/gio.override:
	* gio/unix.defs:
	Add GUnixInputStream type and methods

	* tests/common.py:
	* tests/test_gio.py:
	Add GIO tests.

	* gio/gio.override (_wrap_g_app_info_get_all_for_type),
	(_wrap_g_app_info_get_all),
	(_wrap_g_drive_get_volumes): Implement.

	* gio/gio.override (async_result_callback_marshal): New marshaller
	for async results
	(_wrap_g_input_stream_read_async): Impl.